--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,7 +14,7 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
-.bluebtn {
+.bluebtn, a.bluebtn {
     text-transform: none;
     background: #3c3b6e;
     border-radius: 20px;
@@ -22,7 +22,7 @@
     margin: 0 10px;
     font-weight: normal;
 }
-.redbtn {
+.redbtn, a.redbtn {
     text-transform: none;
     background: #b22234;
     border-radius: 20px;
